Long initiative names no longer overflow.

--- a/public/stylesheets/shared/task_list.css
+++ b/public/stylesheets/shared/task_list.css
@@ -63,8 +63,11 @@ table.task_list .task_type img {
   display: block;
   margin-top: 1px;
 }
-table.task_list td.task_name {
+table.task_list td.task_name,
+table.task_list td.task_project {
   overflow: hidden;
+}
+table.task_list td.task_name {
   padding-left: 0;
 }
 table.task_list td.task_assignee,
